
public class Course {
    // Attributes
    String name;

    // Constructor
    public Course(String name) {
        this.name = name;
    }

    // Method to display course details
    public void displayDetails() {
        // Display course details
        System.out.println(this.name);
    }
}

