
public class Instructor {
    // Attributes
    String name;

    // Constructor
    public Instructor(String name) {
        this.name = name;
    }

    // Method to display instructor details
    public void displayDetails() {
        // Display instructor details
        System.out.println(this.name);
    }
}

